# vdaf-mastic

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: LICENSE  README.md  lib.rs
